--- a/new.html
+++ b/new.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <nav>
+      <h2 class="logo">
+  <img src="myphoto.jpg" alt="Smit Virani" class="logo-img" />
+  Smit Virani
+            </h2>
       <div class="nav-container">
         <h2 class="logo">Smit Virani</h2>
         <ul class="nav-links">
