--- a/new.html
+++ b/new.html
@@ -25,20 +25,24 @@
     </nav>
 
     <header id="home" class="hero">
-      <h1>Smit Virani</h1>
-      <p>Creative Developer & Strategist</p>
-      <div class="social-links">
-        <a
-          href="https://www.linkedin.com/in/smit-virani-5ab072275/"
-          target="_blank"
-          class="btn"
-          >LinkedIn</a
-        >
-        <a href="https://github.com/dashboard" target="_blank" class="btn"
-          >GitHub</a
-        >
-      </div>
-    </header>
+  <div class="hero-content">
+    <img src="myphoto.jpg" alt="Smit Virani" class="hero-img" />
+    <h1>Smit Virani</h1>
+  </div>
+  <p>Creative Developer & Strategist</p>
+  <div class="social-links">
+    <a
+      href="https://www.linkedin.com/in/smit-virani-5ab072275/"
+      target="_blank"
+      class="btn"
+      >LinkedIn</a
+    >
+    <a href="https://github.com/dashboard" target="_blank" class="btn"
+      >GitHub</a
+    >
+  </div>
+</header>
+
 
     <section id="projects" class="projects">
       <h2>🛠️ My Projects</h2>
