--- a/new.html
+++ b/new.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-
+    <nav>
       <div class="nav-container">
         <h2 class="logo">Smit Virani</h2>
         <ul class="nav-links">
@@ -25,24 +25,23 @@
     </nav>
 
     <header id="home" class="hero">
-  <div class="hero-content">
-    <img src="myphoto.jpg" alt="Smit Virani" class="hero-img" />
-    <h1>Smit Virani</h1>
-  </div>
-  <p>Creative Developer & Strategist</p>
-  <div class="social-links">
-    <a
-      href="https://www.linkedin.com/in/smit-virani-5ab072275/"
-      target="_blank"
-      class="btn"
-      >LinkedIn</a
-    >
-    <a href="https://github.com/dashboard" target="_blank" class="btn"
-      >GitHub</a
-    >
-  </div>
-</header>
-
+      <div class="hero-content">
+        <img src="myphoto.jpeg" alt="Smit Virani" class="hero-img" />
+        <h1>Smit Virani</h1>
+      </div>
+      <p>Creative Developer & Strategist</p>
+      <div class="social-links">
+        <a
+          href="https://www.linkedin.com/in/smit-virani-5ab072275/"
+          target="_blank"
+          class="btn"
+          >LinkedIn</a
+        >
+        <a href="https://github.com/dashboard" target="_blank" class="btn"
+          >GitHub</a
+        >
+      </div>
+    </header>
 
     <section id="projects" class="projects">
       <h2>🛠️ My Projects</h2>
